# agnes-video-creator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/agnes_video_creator/: __init__.py  assembler.py  batch.py  cache.py  cli.py  config.py  consistency.py  continuity.py  cost_estimator.py  face_analyzer.py  image_generator.py  models.py  novel.py  pipeline_state.py  portraits.py  project.py  reference.py  script_generator.py  sfx_matcher.py  storyboard.py  utils.py  video_generator.py  web_ui.py
src/agnes_video_creator/web_app/: index.html
tests/: conftest.py  test_assembler.py  test_batch.py  test_cache.py  test_config.py  test_consistency.py  test_continuity.py  test_cost_estimator.py  test_json_repair.py  test_models.py  test_novel.py  test_pipeline_state.py  test_portraits.py  test_project.py  test_storyboard.py  test_utils.py
